--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   freezed_annotation: ^2.4.1
   go_router: ^14.1.0
+  image_picker: ^1.1.2
   intl: any
   json_annotation: ^4.9.0
   logger: ^2.3.0
@@ -44,6 +45,7 @@ dependencies:
   riverpod_annotation: ^2.3.5
   shared_preferences: ^2.2.3
   url_strategy: ^0.2.0
+  uuid: ^4.4.0
   vibration: ^1.9.0
 
 dev_dependencies:
