--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   # error_logging_crashlytics:
   #   path: ../../packages/error_logging_crashlytics
   cloud_firestore: ^4.17.5
+  collection: ^1.18.0
   data_privacy:
     path: ../../packages/data_privacy
   device_info_plus: ^10.1.0
