--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.4.0
   flutter_riverpod: ^2.5.1
+  flutter_svg: ^2.0.10+1
   freezed_annotation: ^2.4.1
   go_router: ^14.1.0
   image_picker: ^1.1.2
