--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   go_router: ^14.1.0
   image_picker: ^1.1.2
-  intl: any
+  intl: ^0.19.0
   json_annotation: ^4.9.0
   logger: ^2.3.0
   package_info_plus: ^8.0.0
