--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   # analytics_firebase:
   #   path: ../../packages/analytics_firebase
   animated_list_plus: ^0.5.2
+  animations: ^2.0.11
   auth_core:
     path: ../../packages/auth_core
   auth_firebase:
@@ -32,6 +33,7 @@ dependencies:
   firebase_vertexai: ^0.1.1
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.0
   flutter_displaymode: ^0.6.0
   flutter_dotenv: ^5.1.0
   flutter_gen: any
