--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,17 +20,18 @@ dependencies:
     path: ../../packages/auth_firebase
   # error_logging_crashlytics:
   #   path: ../../packages/error_logging_crashlytics
-  cloud_firestore: ^4.17.5
+  cloud_firestore: ^5.1.0
   collection: ^1.18.0
+  colorful_safe_area: ^1.0.0
   data_privacy:
     path: ../../packages/data_privacy
   device_info_plus: ^10.1.0
   dynamic_color: ^1.7.0
   error_logging_core:
     path: ../../packages/error_logging_core
-  firebase_auth: ^4.20.0
-  firebase_core: ^2.32.0
-  firebase_vertexai: ^0.1.1
+  firebase_auth: ^5.1.2
+  firebase_core: ^3.2.0
+  firebase_vertexai: ^0.2.2+2
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
