--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_gen: any
   flutter_localizations:
     sdk: flutter
+  flutter_markdown: ^0.7.3
   flutter_native_splash: ^2.4.0
   flutter_riverpod: ^2.5.1
   flutter_slidable: ^3.1.1
