--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.9
   custom_lint: ^0.6.4
+  flutter_launcher_icons: "^0.13.1"
   flutter_test:
     sdk: flutter
   freezed: ^2.5.2
