--- a/flutter_launcher_icons-production.yaml
+++ b/flutter_launcher_icons-production.yaml
@@ -1,6 +1,8 @@
 flutter_launcher_icons:
-  android: true
+  android: "launcher_icon"
   ios: true
   remove_alpha_ios: true
+  adaptive_icon_background: "#EAAD28"
+  adaptive_icon_foreground: "assets/icons/men-you-app-icon-foreground.png"
   image_path: "assets/icons/men-you-app-icon.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+  min_sdk_android: 23
