--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
       path: packages/data_privacy
   device_info_plus: ^10.1.0
   dynamic_color: ^1.7.0
+  equatable: ^2.0.5
   error_logging_core:
     git:
       url: https://github.com/Zambrella/hugetooth.git
